--- a/nxus-frontend/src/app/features/spotify/connect-spotify/connect-spotify.html
+++ b/nxus-frontend/src/app/features/spotify/connect-spotify/connect-spotify.html
@@ -1,1 +1,4 @@
-<p>connect-spotify works!</p>
+<button *ngIf="!spotify.isConnected(); else ok" class="connect" (click)="connect()">Connect Spotify</button>
+<ng-template #ok>
+  <button class="connect ok" disabled>Connected to Spotify</button>
+</ng-template>
