--- a/nxus-frontend/src/styles.scss
+++ b/nxus-frontend/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+:root { color-scheme: dark; }
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: #070a0f;
+  overflow: hidden; /* no scroll bar frame */
+}
+* { box-sizing: border-box; }
